# libraries

./: .env  .gitignore  Makefile  README.md  main.py  mkdocs.yml  pyproject.toml
docs/: index.md  setup.md  tools_docs.md
libraries/: config.py  main.py
libraries/adapters/inbound/: dependencies.py
libraries/adapters/inbound/controllers/: users.py
libraries/adapters/outbound/db/: session.py  user_repository_impl.py
libraries/adapters/outbound/db/alembic/: alembic.ini  env.py
libraries/domain/: repositories.py  use_cases.py
libraries/domain/entities/: dtos.py
src/adapters/outbound/db/alembic/: alembic.ini  env.py
src/adapters/outbound/db/alembic/versions/: 0d0ca1de67a6_create_users_table.py
src/domain/: models.py
src/domain/entities/: dtos.py  models.py
test/: test_models.py
test/domain/: test_models.py
